--- a/app/globals.css
+++ b/app/globals.css
@@ -87,6 +87,10 @@ body {
   .wrapper {
     @apply max-w-7xl lg:mx-auto p-5 md:px-10 xl:px-0 w-full;
   }
+  
+  .wrapper1{
+    @apply lg:mx-auto xl:px-0 w-full;    
+  }
 
   .flex-center {
     @apply flex justify-center items-center;
@@ -276,4 +280,19 @@ body {
 
 .react-datepicker__time-list-item--selected {
   background-color: #624cf5 !important;
+}
+.custom-select {
+  min-width: 600px; 
+  width: auto; 
+}
+
+.custom-placeholder::placeholder {
+  color: lightgrey; 
+}
+
+@media (min-width: 1024px) {
+  .main-image {
+    padding-top: 0 !important;
+    height: 100vh;
+  }
 }
