--- a/components/shared/footer.css
+++ b/components/shared/footer.css
@@ -45,7 +45,7 @@ ul{
 }
  .footer-col ul li a{
     font-size: 14px;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
     color: #ffffff;
     text-decoration: none;
     font-weight: 0;
