add review box and change hero about sections

--- a/components/shared/footer.css
+++ b/components/shared/footer.css
@@ -35,7 +35,7 @@ ul{
     position: absolute;
     left: 0;
     bottom: -10px;
-    background-color: #1e54e9;
+    background-color: #4d4d4d;
     height: 2px;
     box-sizing: border-box;
     width: 50px;
